--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -15,14 +15,14 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.15",
-    "@chakra-ui/react": "^1.6.6",
+    "@chakra-ui/react": "^1.8.7",
     "@chakra-ui/theme": "^1.10.0",
     "@davatar/react": "^1.8.1",
-    "@emotion/react": "^11.4.1",
+    "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.3.0",
-    "@gnosis.pm/safe-apps-web3modal": "^1.0.0",
+    "@gnosis.pm/safe-apps-web3modal": "^12.0.0",
     "@uniswap/token-lists": "^1.0.0-beta.21",
-    "@walletconnect/web3-provider": "^1.6.0",
+    "@walletconnect/web3-provider": "^1.7.7",
     "ajv": "^6.12.6",
     "axios": "^0.21.1",
     "copy-to-clipboard": "^3.3.1",
@@ -38,7 +38,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "walletlink": "^2.1.9",
-    "web3modal": "^1.9.4"
+    "web3modal": "^1.9.6"
   },
   "license": "UNLICENSED",
   "scripts": {
@@ -47,5 +47,6 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "lint": "eslint \"./src/**/*.{js,jsx}\""
-  }
+  },
+  "devDependencies": {}
 }
