fixed bugs with react

--- a/package.json
+++ b/package.json
@@ -66,5 +66,7 @@
     ],
     "*.{json,md}": "prettier --write"
   },
-  "dependencies": {}
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
+  }
 }
