switch back to rpc.xdaichain.com

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -47,7 +47,7 @@ jobs:
           REACT_APP_DEBUG_LOGS: false
           REACT_APP_GRAPH_HEALTH_UPDATE_INTERVAL: 60000
           REACT_APP_GRAPH_HEALTH_THRESHOLD_BLOCKS: 10
-          REACT_APP_XDAI_RPC_URL: https://rpc.gnosischain.com https://dai.poa.network
+          REACT_APP_XDAI_RPC_URL: https://rpc.xdaichain.com https://dai.poa.network
           REACT_APP_POA_RPC_URL: https://core.poa.network
           REACT_APP_SOKOL_RPC_URL: https://sokol.poa.network
           REACT_APP_MAINNET_RPC_URL: https://mainnet.infura.io/v3/${{ secrets.INFURA_ID }} https://mainnet-nethermind.blockscout.com/
