--- a/.github/workflows/sokol.yml
+++ b/.github/workflows/sokol.yml
@@ -55,6 +55,7 @@ jobs:
           REACT_APP_BSC_RPC_URL: https://bsc-dataseed.binance.org https://bsc-dataseed1.defibit.io/
           REACT_APP_COINZILLA_API_KEY: ${{ secrets.COINZILLA_API_KEY }}
           REACT_APP_OWLRACLE_API_KEY: ${{ secrets.OWLRACLE_API_KEY }}
+          REACT_APP_SENTRY_DSN: ${{ secrets.STAGING_SENTRY_DSN }}
 
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
