--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -21,6 +21,8 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.3.0",
     "@gnosis.pm/safe-apps-web3modal": "^12.0.0",
+    "@sentry/react": "^6.19.7",
+    "@sentry/tracing": "^6.19.7",
     "@uniswap/token-lists": "^1.0.0-beta.21",
     "@walletconnect/web3-provider": "^1.7.7",
     "ajv": "^6.12.6",
