--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -32,6 +32,7 @@
     "focus-visible": "^5.2.0",
     "framer-motion": "^4.1.17",
     "gas-price-oracle": "^0.3.3",
+    "graphql": "^16.5.0",
     "graphql-request": "^3.5.0",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
