--- a/.github/workflows/gcp-deploy.yaml
+++ b/.github/workflows/gcp-deploy.yaml
@@ -9,12 +9,6 @@ on:
       - reopened
       - synchronize
 
-env:
-  PROJECT_ID: omnibridge-ui
-  REGISTRY_REGION: asia
-  REGISTRY_REPO: frontend
-  CLOUDRUN_REGION: asia-east1
-
 jobs:
   deploy:
     name: Deploy to Cloud Run
@@ -35,53 +29,62 @@ jobs:
 
       - name: Undeploy
         continue-on-error: true
-        run: gcloud -q run services delete omnibridge-ui-preview-${{github.event.number}} --region ${CLOUDRUN_REGION}
+        run: gcloud -q run services delete omnibridge-ui-preview-${{github.event.number}} --region asia-east1
 
       - name: Delete image
         continue-on-error: true
-        run: gcloud -q artifacts docker images delete ${REGISTRY_REGION}-docker.pkg.dev/${PROJECT_ID}/${REGISTRY_REPO}/dev-image-${{github.event.number}}
+        run: gcloud -q artifacts docker images delete asia-docker.pkg.dev/omnibridge-ui/frontend/dev-image-${{github.event.number}}
 
       - name: Set up gcloud
         uses: google-github-actions/setup-gcloud@v0
 
-      - uses: mr-smithers-excellent/docker-build-push@v5
-        name: Build & push Docker image
+      - name: Build Container Image
+        uses: mattes/cached-docker-build-action@v1
         with:
-          image: ${PROJECT_ID}/${REGISTRY_REPO}/dev-image-${{github.event.number}}
-          registry: ${REGISTRY_REGION}-docker.pkg.dev
+          args: |
+            . -f Dockerfile \
+              --tag omnibridge-ui/frontend/dev-image-${{github.event.number}} \
+              --build-arg "REACT_APP_DEFAULT_BRIDGE_DIRECTION=kovan-sokol" \
+              --build-arg "REACT_APP_ENABLED_BRIDGES=eth-xdai bsc-xdai poa-xdai eth-bsc kovan-sokol" \
+              --build-arg "REACT_APP_INFURA_ID=${{ secrets.PERSONAL_INFURA_ID }}" \
+              --build-arg "REACT_APP_GAS_PRICE_FALLBACK_GWEI=50" \
+              --build-arg "REACT_APP_GAS_PRICE_SUPPLIER_URL=https://gasprice.poa.network/" \
+              --build-arg "REACT_APP_GAS_PRICE_SPEED_TYPE=fast" \
+              --build-arg "REACT_APP_GAS_PRICE_UPDATE_INTERVAL=60000" \
+              --build-arg "REACT_APP_ETH_PRICE_API_URL=https://api.coingecko.com/api/v3/simple/price?ids=ethereum&vs_currencies=USD" \
+              --build-arg "REACT_APP_ETH_PRICE_UPDATE_INTERVAL=60000" \
+              --build-arg "REACT_APP_TITLE=OmniBridge - %c" \
+              --build-arg "REACT_APP_DESCRIPTION=The OmniBridge multi-token extension is the simplest way to transfer ANY ERC20/ERC677/ERC827 token to and from the xDai chain." \
+              --build-arg "REACT_APP_UI_STATUS_UPDATE_INTERVAL=5000" \
+              --build-arg "REACT_APP_DEBUG_LOGS=true" \
+              --build-arg "REACT_APP_GRAPH_HEALTH_UPDATE_INTERVAL=60000" \
+              --build-arg "REACT_APP_GRAPH_HEALTH_THRESHOLD_BLOCKS=10" \
+              --build-arg "REACT_APP_XDAI_RPC_URL=https://rpc.ankr.com/gnosis" \
+              --build-arg "REACT_APP_POA_RPC_URL=https://core.poa.network" \
+              --build-arg "REACT_APP_SOKOL_RPC_URL=https://sokol.poa.network" \
+              --build-arg "REACT_APP_MAINNET_RPC_URL=https://mainnet.infura.io/v3/${{ secrets.PERSONAL_INFURA_ID }} https://mainnet-nethermind.blockscout.com/" \
+              --build-arg "REACT_APP_KOVAN_RPC_URL=https://kovan.infura.io/v3/${{ secrets.PERSONAL_INFURA_ID }} https://kovan.poa.network/" \
+              --build-arg "REACT_APP_BSC_RPC_URL=https://bsc-dataseed.binance.org https://bsc-dataseed1.defibit.io/" \
+              --build-arg "REACT_APP_COINZILLA_API_KEY=${{ secrets.COINZILLA_API_KEY }}" \
+              --build-arg "REACT_APP_OWLRACLE_API_KEY=${{ secrets.OWLRACLE_API_KEY }}" \
+              --build-arg "REACT_APP_SENTRY_DSN=${{ secrets.SENTRY_DSN }}"
+          cache_key: "${{github.event.inputs.cache_key}}-${{hashFiles('packages/dapp/**', 'package.json')}}"
+
+      - name: Login to Docker Registry
+        uses: docker/login-action@v1
+        with:
+          registry: asia-docker.pkg.dev
           username: _json_key
           password: ${{ secrets.GCP_CREDENTIALS }}
-          buildArgs:
-            - "REACT_APP_DEFAULT_BRIDGE_DIRECTION=kovan-sokol"
-            - "REACT_APP_ENABLED_BRIDGES=eth-xdai bsc-xdai poa-xdai eth-bsc kovan-sokol"
-            - "REACT_APP_INFURA_ID=${{ secrets.PERSONAL_INFURA_ID }}"
-            - "REACT_APP_GAS_PRICE_FALLBACK_GWEI=50"
-            - "REACT_APP_GAS_PRICE_SUPPLIER_URL=https://gasprice.poa.network/"
-            - "REACT_APP_GAS_PRICE_SPEED_TYPE=fast"
-            - "REACT_APP_GAS_PRICE_UPDATE_INTERVAL=60000"
-            - "REACT_APP_ETH_PRICE_API_URL=https://api.coingecko.com/api/v3/simple/price?ids=ethereum&vs_currencies=USD"
-            - "REACT_APP_ETH_PRICE_UPDATE_INTERVAL=60000"
-            - "REACT_APP_TITLE=OmniBridge - %c"
-            - "REACT_APP_DESCRIPTION=The OmniBridge multi-token extension is the simplest way to transfer ANY ERC20/ERC677/ERC827 token to and from the xDai chain."
-            - "REACT_APP_UI_STATUS_UPDATE_INTERVAL=5000"
-            - "REACT_APP_DEBUG_LOGS=true"
-            - "REACT_APP_GRAPH_HEALTH_UPDATE_INTERVAL=60000"
-            - "REACT_APP_GRAPH_HEALTH_THRESHOLD_BLOCKS=10"
-            - "REACT_APP_XDAI_RPC_URL=https://rpc.ankr.com/gnosis"
-            - "REACT_APP_POA_RPC_URL=https://core.poa.network"
-            - "REACT_APP_SOKOL_RPC_URL=https://sokol.poa.network"
-            - "REACT_APP_MAINNET_RPC_URL=https://mainnet.infura.io/v3/${{ secrets.PERSONAL_INFURA_ID }} https://mainnet-nethermind.blockscout.com/"
-            - "REACT_APP_KOVAN_RPC_URL=https://kovan.infura.io/v3/${{ secrets.PERSONAL_INFURA_ID }} https://kovan.poa.network/"
-            - "REACT_APP_BSC_RPC_URL=https://bsc-dataseed.binance.org https://bsc-dataseed1.defibit.io/"
-            - "REACT_APP_COINZILLA_API_KEY=${{ secrets.COINZILLA_API_KEY }}"
-            - "REACT_APP_OWLRACLE_API_KEY=${{ secrets.OWLRACLE_API_KEY }}"
-            - "REACT_APP_SENTRY_DSN=${{ secrets.SENTRY_DSN }}"
+
+      - name: Push Container Image
+        run: docker push omnibridge-ui/frontend/dev-image-${{github.event.number}}
 
       - name: Deploy to Cloud Run
         run: |
           gcloud -q run deploy omnibridge-ui-preview-${{github.event.number}} \
-            --image ${REGISTRY_REGION}-docker.pkg.dev/${PROJECT_ID}/${REGISTRY_REPO}/dev-image-${{github.event.number}} \
-            --region ${CLOUDRUN_REGION} \
+            --image asia-docker.pkg.dev/omnibridge-ui/frontend/dev-image-${{github.event.number}} \
+            --region asia-east1 \
             --port 3000 \
             --cpu 1 \
             --memory 512Mi \
