--- a/.github/workflows/gcp-undeploy.yaml
+++ b/.github/workflows/gcp-undeploy.yaml
@@ -25,7 +25,7 @@ jobs:
         run: gcloud -q run services delete omnibridge-ui-preview-${{github.event.number}} --region asia-east1
 
       - name: Delete image
-        run: gcloud -q artifacts docker images delete asia-docker.pkg.dev/omnibridge-ui/frontend/dev-image-${{github.event.number}}
+        run: gcloud -q artifacts docker images delete asia-east1-docker.pkg.dev/omnibridge-ui/frontend/dev-image-${{github.event.number}}
 
       - name: Comment on pull request
         uses: thollander/actions-comment-pull-request@v1
