setup gcp deploy previews on develop branch

--- a/.github/workflows/gcp-deploy.yaml
+++ b/.github/workflows/gcp-deploy.yaml
@@ -3,7 +3,7 @@ name: Deploy Preview to Cloud Run
 on:
   pull_request:
     branches:
-      - feat/previews
+      - develop
     types:
       - opened
       - reopened
