--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,7 +44,7 @@ jobs:
           pip install awscli --upgrade --user
       
       - name: Build Release App
-        if: github.ref == 'refs/heads/release'
+        if: ( github.ref == 'refs/heads/release' || github.ref == 'refs/heads/master' )
         run: yarn dapp:build
         env:
           CI: true
@@ -84,7 +84,7 @@ jobs:
 
       # Script to deploy to release environment
       - name: 'Deploy to S3: Release'
-        if: github.ref == 'refs/heads/release'
+        if: ( github.ref == 'refs/heads/release' || github.ref == 'refs/heads/master' )
         run: |
           aws s3 sync packages/dapp/build/ s3://${{ secrets.RELEASE_BUCKET_NAME }} --delete --exclude "*.html" --cache-control max-age=86400,public
           aws s3 sync packages/dapp/build/ s3://${{ secrets.RELEASE_BUCKET_NAME }} --delete --exclude "*" --include "*.html" --cache-control max-age=0,no-cache,no-store,must-revalidate --content-type text/html
