--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -63,7 +63,7 @@ jobs:
           REACT_APP_DEBUG_LOGS: "true"
           REACT_APP_GRAPH_HEALTH_UPDATE_INTERVAL: "60000"
           REACT_APP_GRAPH_HEALTH_THRESHOLD_BLOCKS: "10"
-          REACT_APP_XDAI_RPC_URL: "https://rpc.gnosischain.com/"
+          REACT_APP_XDAI_RPC_URL: "https://rpc.gnosischain.com"
           REACT_APP_POA_RPC_URL: "https://core.poa.network" 
           REACT_APP_SOKOL_RPC_URL: "https://sokol.poa.network"
           REACT_APP_MAINNET_RPC_URL: "https://mainnet.infura.io/v3/9aa3d95b3bc440fa88ea12eaa4456161 https://rpc.ankr.com/eth" 
