--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -75,7 +75,7 @@ jobs:
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
-        if: ( github.ref == 'refs/heads/release' || github.ref == 'refs/heads/master' )
+        if: ( github.ref == 'refs/heads/release' )
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -84,7 +84,21 @@ jobs:
 
       # Script to deploy to release environment
       - name: 'Deploy to S3: Release'
-        if: ( github.ref == 'refs/heads/release' || github.ref == 'refs/heads/master' )
+        if: ( github.ref == 'refs/heads/release' )
         run: |
           aws s3 sync packages/dapp/build/ s3://${{ secrets.RELEASE_BUCKET_NAME }} --delete --exclude "*.html" --cache-control max-age=86400,public
           aws s3 sync packages/dapp/build/ s3://${{ secrets.RELEASE_BUCKET_NAME }} --delete --exclude "*" --include "*.html" --cache-control max-age=0,no-cache,no-store,must-revalidate --content-type text/html
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        if: ( github.ref == 'refs/heads/master' )
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+
+      - name: 'Deploy to S3: PROD'
+        if: ( github.ref == 'refs/heads/master' )
+        run: |
+          aws s3 sync packages/dapp/build/ s3://${{ secrets.PROD_BUCKET_NAME }} --delete --exclude "*.html" --cache-control max-age=86400,public
+          aws s3 sync packages/dapp/build/ s3://${{ secrets.PROD_BUCKET_NAME }} --delete --exclude "*" --include "*.html" --cache-control max-age=0,no-cache,no-store,must-revalidate --content-type text/html
