--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -49,7 +49,7 @@ jobs:
         env:
           CI: true
           REACT_APP_DEFAULT_BRIDGE_DIRECTION: eth-xdai
-          REACT_APP_ENABLED_BRIDGES: "eth-xdai bsc-xdai poa-xdai eth-bsc kovan-sokol"
+          REACT_APP_ENABLED_BRIDGES: "eth-xdai bsc-xdai"
           REACT_APP_INFURA_ID: "" 
           REACT_APP_GAS_PRICE_FALLBACK_GWEI: "50"
           REACT_APP_GAS_PRICE_SUPPLIER_URL: "https://gasprice.poa.network/"
@@ -66,7 +66,7 @@ jobs:
           REACT_APP_XDAI_RPC_URL: "https://rpc.gnosischain.com"
           REACT_APP_POA_RPC_URL: "https://core.poa.network" 
           REACT_APP_SOKOL_RPC_URL: "https://sokol.poa.network"
-          REACT_APP_MAINNET_RPC_URL: "https://mainnet.infura.io/v3/9aa3d95b3bc440fa88ea12eaa4456161 https://rpc.ankr.com/eth" 
+          REACT_APP_MAINNET_RPC_URL: "${{ secrets.PRIVATE_RPC_MAINNET }} https://rpc.ankr.com/eth" 
           REACT_APP_KOVAN_RPC_URL: "https://kovan.infura.io/v3/9aa3d95b3bc440fa88ea12eaa4456161"
           REACT_APP_BSC_RPC_URL: "https://bsc-dataseed.binance.org https://bsc-dataseed1.defibit.io/"
           REACT_APP_COINZILLA_API_KEY: ""
