Revert "Fix conflict"
This reverts commit bb6b4195e6da9dab890d1757b830997bc1509de0.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "subgraph:auth": "yarn workspace @omnibridge/subgraph auth",
     "subgraph:codegen": "yarn workspace @omnibridge/subgraph codegen",
     "subgraph:build": "yarn workspace @omnibridge/subgraph build",
+    "subgraph:prepare-kovan": "yarn workspace @omnibridge/subgraph prepare-kovan",
+    "subgraph:deploy-kovan": "yarn workspace @omnibridge/subgraph deploy-kovan",
+    "subgraph:prepare-sokol": "yarn workspace @omnibridge/subgraph prepare-sokol",
+    "subgraph:deploy-sokol": "yarn workspace @omnibridge/subgraph deploy-sokol",
     "subgraph:prepare-xdai": "yarn workspace @omnibridge/subgraph prepare-xdai",
     "subgraph:deploy-xdai": "yarn workspace @omnibridge/subgraph deploy-xdai",
     "subgraph:prepare-mainnet": "yarn workspace @omnibridge/subgraph prepare-mainnet",
