--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,9 @@ services:
         REACT_APP_GRAPH_HEALTH_THRESHOLD_BLOCKS: ${REACT_APP_GRAPH_HEALTH_THRESHOLD_BLOCKS}
         REACT_APP_XDAI_RPC_URL: ${REACT_APP_XDAI_RPC_URL}
         REACT_APP_POA_RPC_URL: ${REACT_APP_POA_RPC_URL}
+        REACT_APP_SOKOL_RPC_URL: ${REACT_APP_SOKOL_RPC_URL}
         REACT_APP_MAINNET_RPC_URL: ${REACT_APP_MAINNET_RPC_URL}
+        REACT_APP_KOVAN_RPC_URL: ${REACT_APP_KOVAN_RPC_URL}
         REACT_APP_BSC_RPC_URL: ${REACT_APP_BSC_RPC_URL}
         REACT_APP_COINZILLA_API_KEY: ${REACT_APP_COINZILLA_API_KEY}
         REACT_APP_OWLRACLE_API_KEY: ${REACT_APP_OWLRACLE_API_KEY}
