Revert "Remove BSC-XDAI option due to deprecation"
This reverts commit 91d5aa81187075565ee7850454ac950d2c439148.

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -49,7 +49,7 @@ jobs:
         env:
           CI: true
           REACT_APP_DEFAULT_BRIDGE_DIRECTION: eth-xdai
-          REACT_APP_ENABLED_BRIDGES: "eth-xdai"
+          REACT_APP_ENABLED_BRIDGES: "eth-xdai bsc-xdai"
           REACT_APP_INFURA_ID: "" 
           REACT_APP_GAS_PRICE_FALLBACK_GWEI: "50"
           REACT_APP_GAS_PRICE_SUPPLIER_URL: "https://gasprice.poa.network/"
