feat: replace ALM with bridge-explorer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
         REACT_APP_TITLE: ${REACT_APP_TITLE}
         REACT_APP_DESCRIPTION: ${REACT_APP_DESCRIPTION}
         REACT_APP_UI_STATUS_UPDATE_INTERVAL: ${REACT_APP_UI_STATUS_UPDATE_INTERVAL}
+        REACT_APP_BRIDGE_EXPLORER_URL: ${REACT_APP_BRIDGE_EXPLORER_URL}
         REACT_APP_DEBUG_LOGS: ${REACT_APP_DEBUG_LOGS}
         REACT_APP_GRAPH_HEALTH_UPDATE_INTERVAL: ${REACT_APP_GRAPH_HEALTH_UPDATE_INTERVAL}
         REACT_APP_GRAPH_HEALTH_THRESHOLD_BLOCKS: ${REACT_APP_GRAPH_HEALTH_THRESHOLD_BLOCKS}
